--- a/05-preliminaries-estimation.Rmd
+++ b/05-preliminaries-estimation.Rmd
@@ -8,7 +8,8 @@
   - Many of these assumptions are empirically unverifiable
   - We saw an example where we could relax the cross-world assumption, at the
     cost of changing the parameter interpretation
-  - and where we could relax the positivity assumption, also at the cost of changing the parameter interpretation
+  - and where we could relax the positivity assumption, also at the cost of
+    changing the parameter interpretation
 - The resulting estimation problem can be tackled using **statistical
   assumptions** of various degrees of strength
   - Most of these assumptions are verifiable (e.g., a linear model)
@@ -29,8 +30,8 @@
 - This means that we can compute it for any distribution $\P$
 - For example, if we know the true $\P(W,A,M,Y)$, we can comnpute the true value
   of the parameter by:
-  - Computing the conditional expectation $\E(Y\mid A=1,M=m,W=w)$ for all values
-    $(m,w)$
+  - Computing the conditional expectation $\E(Y\mid A=1,M=m,W=w)$ for all
+    values $(m,w)$
   - Computing the probability $\P(M=m\mid A=0,W=w)$ for all values $(m,w)$
   - Computing the probability $\P(W=w)$ for all values $w$
   - Computing the mean over all values $(m,w)$
@@ -39,7 +40,7 @@
 
 The above is how you would compute the _true value_ **if you know** the true
   distribution $\P$
-  
+
 - This is exactly what we did in our R examples before
 - But we can use the same logic for estimation:
   - Fit a regression to estimate, say $\hat\E(Y\mid A=1,M=m,W=w)$
@@ -47,14 +48,15 @@ The above is how you would compute the _true value_ **if you know** the true
   - Estimate $\P(W=w)$ with the empirical distribution
   - Evaluate
     \begin{equation*}
-    \psi(\hat\P) =  \hat\E[\hat\E\{\hat\E(Y \mid A=1, M, W) - \hat\E(Y \mid A=0, M, W)\mid A=0,W\}]
+      \psi(\hat\P) =  \hat\E[\hat\E\{\hat\E(Y \mid A=1, M, W) -
+      \hat\E(Y \mid A=0, M, W)\mid A=0,W\}]
   \end{equation*}
-- This is known as the g-computation estimator 
+- This is known as the g-computation estimator
 
 ### How can g-estimation be implemented in practice?
 
 - There are two possible ways to do g-computation estimation:
-  - Using parametric models for the above regressions 
+  - Using parametric models for the above regressions
   - Using flexible data-adaptive regression (aka machine learning)
 
 ### Pros and cons of parametric models
@@ -71,15 +73,16 @@ The above is how you would compute the _true value_ **if you know** the true
 
 ### An example of the bias of a g-computation estimator of the natural direct effect
 
-- The following R chunk provides simulation code to exemplify the bias of a g-computation estimator in a simple situation
-```{r, echo = TRUE, eval = FALSE}
+- The following `R` chunk provides simulation code to exemplify the bias of a
+  g-computation estimator in a simple situation
+```{r}
 mean_y <- function(m, a, w) abs(w) + a * m
 mean_m <- function(a, w) plogis(w^2 - a)
 pscore <- function(w) plogis(1 - abs(w))
 ```
 
 - This yields a true NDE value of
-```{r, echo = TRUE, eval = FALSE}
+```{r}
 w_big <- runif(1e6, -1, 1)
 trueval <- mean((mean_y(1, 1, w_big) - mean_y(1, 0, w_big)) *
   mean_m(0, w_big) + (mean_y(0, 1, w_big) - mean_y(0, 0, w_big)) *
@@ -88,7 +91,7 @@ print(trueval)
 ```
 
 - Let's perform a simulation where we draw 1000 datasets from the above distribution, and compute a g-computation estimator based on
-```{r, echo = TRUE, eval = FALSE}
+```{r}
 gcomp <- function(y, m, a, w) {
   lm_y <- lm(y ~ m + a + w)
   pred_y1 <- predict(lm_y, newdata = data.frame(a = 1, m = m, w = w))
@@ -101,7 +104,7 @@ gcomp <- function(y, m, a, w) {
 }
 ```
 
-```{r, echo = TRUE, eval = FALSE}
+```{r}
 estimate <- numeric(1000)
 for (i in 1:1000) {
   n <- 1000
@@ -118,7 +121,7 @@ abline(v = trueval, col = "red", lwd = 4)
 ```
 
 - The bias also affects the confidence intervals:
-```{r, echo = TRUE, eval = FALSE, fig.height = 8, fig.width = 8}
+```{r, fig.height = 8, fig.width = 8}
 cis <- cbind(
   estimate - qnorm(0.975) * sd(estimate),
   estimate + qnorm(0.975) * sd(estimate)
@@ -158,7 +161,15 @@ text(450, 0.01, paste0(
 
 
 ## Semiparametric estimation (or correcting the bias of g-computation estimators)
-<!--KER this may be just me, but I'm not sure the "incorrect bias/variance tradeoff" argument will be super concrete for folks. I think maybe a more concrete/motivating argument would be to say that we want to use data adaptive methods because we don't know how to correctly specify all our models. we also want valid standard errors and confidence intervals. to do this, we need to use semiparametric estimation-->
+
+<!--
+KER this may be just me, but I'm not sure the "incorrect bias/variance
+tradeoff" argument will be super concrete for folks. I think maybe a more
+concrete/motivating argument would be to say that we want to use data adaptive
+methods because we don't know how to correctly specify all our models. we also
+want valid standard errors and confidence intervals. to do this, we need to use
+semiparametric estimation
+-->
 
 - G-computation estimation with data-adaptive regression offers an incorrect
     bias/variance trade-off
@@ -167,7 +178,7 @@ text(450, 0.01, paste0(
   \begin{equation*}
     \psi(\hat \P) + \frac{1}{n}\sum_{i=1}^n D(O_i)
   \end{equation*}
-for some function $D(O_i)$ of the data
+  for some function $D(O_i)$ of the data
 - The function $D(O)$ is called _the efficient influence function_ (EIF)
 - The EIF must be found on a case-by-case basis for each parameter $\psi(\P)$
 - For example, for estimating the standardized mean $\psi(\P)=\E[\E(Y\mid A=1,
@@ -183,6 +194,7 @@ for some function $D(O_i)$ of the data
   these EIFs
 - And the specific form of the EIF may be found in papers in the references
 
-Note: the bias correction above may have an additional problem of returning parameter estimates outside of natural bounds. E.g., probabilities greater than one. A solution to this (not discussed in this workshop) is targeted minimum loss based estimation.
-
-
+Note: the bias correction above may have an additional problem of returning
+parameter estimates outside of natural bounds. E.g., probabilities greater than
+one. A solution to this (not discussed in this workshop) is targeted minimum
+loss based estimation.
