--- a/06-estimation-natural-interventional.Rmd
+++ b/06-estimation-natural-interventional.Rmd
@@ -64,11 +64,9 @@ shorten >=2pt,}
 \end{tikzpicture}
 ```
 
-- Assuming a binary $A$, we define the natural direct effect as:
-$$NDE = E(Y_{1,M_{0}} - Y_{0,M_{0}}),$$
+- Assuming a binary $A$, we define the natural direct effect as: $$NDE = E(Y_{1,M_{0}} - Y_{0,M_{0}}),$$
 
-- and the natural indirect effect as:
-$$NIE = E(Y_{1,M_{1}} - Y_{1,M_{0}}).$$
+- and the natural indirect effect as: $$NIE = E(Y_{1,M_{1}} - Y_{1,M_{0}}).$$
 
 - The observed data is $O=(W, A, M, Y)$
 
@@ -109,8 +107,8 @@ Let's take the NDE as an example:
    We'll call the result $\bar{Q}_Y(M,1,W)$. Predict outcome values setting
    $A=0$. We'll call the result $\bar{Q}_Y(M,0,W)$.
 2. Take the difference $\bar{Q}_Y(M,1,W) - \bar{Q}_Y(M,0,W)$ and regress it on
-   $W$ among those for whom $A=0$. This recovers the expected difference had all
-   individuals been set to the control condition $A = 0$.
+   $W$ among those for whom $A=0$. This recovers the expected difference had
+   all individuals been set to the control condition $A = 0$.
 3. The sample mean of the predicted values gives the estimate.
 -->
 
@@ -129,18 +127,21 @@ First, we need to introduce some notation to describe the EIF for the NDE
     D(O) &= \color{ForestGreen}{\bigg\{ \frac{I(A=1)}{\P(A=1\mid W)}\frac{\P(M\mid A=0,W)}{\P(M\mid A=1,W)} -
       \frac{I(A=0)}{\P(A=0\mid W)}\bigg\}} \times [Y-\E(Y\mid A,M,W)]  \\
     &+ \frac{I(A=0)}{\P(A=0\mid W)}\big\{Q(M,W) - \E[Q(M,W) | W,A=0] \big\}\\
-    &+ \E[Q(M,W) | W,A=0] - \psi(\P) 
+    &+ \E[Q(M,W) | W,A=0] - \psi(\P)
 \end{align*}
 
-- Estimating $\P(M\mid A, W)$ is a really hard problem when $M$ is high-dimensional. But,
-since we have the ratio of these conditional densitities, we can reparamterize
-using Bayes rule to get something that is easier to compute:
+- Estimating $\P(M\mid A, W)$ is a really hard problem when $M$ is
+  high-dimensional. But, since we have the ratio of these conditional
+  densitities, we can reparamterize using Bayes rule to get something that is
+  easier to compute:
 
 \begin{equation*}
-  \frac{\P(M\mid A=0,W)}{\P(M\mid A=1,W)} = \frac{\P(A = 0 \mid M, W) \P(A=1 \mid W)}{\P(A = 1 \mid M, W)\P(A=0 \mid W)}.
+  \frac{\P(M\mid A=0,W)}{\P(M\mid A=1,W)} = \frac{\P(A = 0 \mid M, W) \P(A=1
+  \mid W)}{\P(A = 1 \mid M, W)\P(A=0 \mid W)}.
 \end{equation*}
 
-Thus we can change the expression of the EIF a bit as follows. First, some more notation that will be useful later:
+Thus we can change the expression of the EIF a bit as follows. First, some more
+notation that will be useful later:
 
 - Let $g(a\mid w)$ denote $\P(A=a\mid W=w)$
 - Let $e(a\mid m, w)$ denote $\P(A=a\mid M=m, W=w)$
@@ -151,20 +152,21 @@ Thus we can change the expression of the EIF a bit as follows. First, some more 
     D(O) &= \color{ForestGreen}{\bigg\{ \frac{I(A=1)}{g(0\mid W)}\frac{e(0\mid M,W)}{e(1\mid M,W)} -
       \frac{I(A=0)}{g(0\mid W)}\bigg\}} \times [Y-b(A,M,W)]  \\
     &+ \frac{I(A=0)}{g(0\mid W)}\big\{Q(M,W) - \E[Q(M,W) | W,A=0] \big\}\\
-    &+ \E[Q(M,W) | W,A=0] - \psi(\P) 
+    &+ \E[Q(M,W) | W,A=0] - \psi(\P)
 \end{align*}
 
 ### How to compute the one-step estimator (akin to Augmented IPW)
 
 First we will generate some data:
-```{r, echo = TRUE, eval = TRUE}
+```{r}
 mean_y <- function(m, a, w) abs(w) + a * m
 mean_m <- function(a, w)plogis(w^2 - a)
 pscore <- function(w) plogis(1 - abs(w))
 
 w_big <- runif(1e6, -1, 1)
-trueval <- mean((mean_y(1, 1, w_big) - mean_y(1, 0, w_big)) * mean_m(0, w_big) +
-  (mean_y(0, 1, w_big) - mean_y(0, 0, w_big)) * (1 - mean_m(0, w_big)))
+trueval <- mean((mean_y(1, 1, w_big) - mean_y(1, 0, w_big)) * mean_m(0, w_big)
+                + (mean_y(0, 1, w_big) - mean_y(0, 0, w_big)) *
+                  (1 - mean_m(0, w_big)))
 
 n <- 1000
 w <- runif(n, -1, 1)
@@ -173,10 +175,11 @@ m <- rbinom(n, 1, mean_m(a, w))
 y <- rnorm(n, mean_y(m, a, w))
 ```
 
-Recall that the one-step estimator is defined as the bias-corrected g-computation estimator:
-  \begin{equation*}
-    \psi(\hat \P) + \frac{1}{n}\sum_{i=1}^n D(O;\hat \P_i)
-  \end{equation*}
+Recall that the one-step estimator is defined as the bias-corrected
+g-computation estimator:
+\begin{equation*}
+  \psi(\hat \P) + \frac{1}{n}\sum_{i=1}^n D(O;\hat \P_i)
+\end{equation*}
 
 Can be computed  in the following steps:
 
@@ -185,7 +188,7 @@ Can be computed  in the following steps:
      tractability
    - In applied settings we recommend using an ensemble of data-adaptive
      regression algorithms, such as the Super Learner [CITE]
-```{r, echo = TRUE, eval = FALSE}
+```{r}
 library(mgcv)
 ## fit model for E(Y | A, W)
 b_fit <- gam(y ~ m:a + s(w, by = a)
@@ -198,7 +201,7 @@ g_fit <- gam(a ~ w, family = binomial)
 2. Compute predictions  $g(1\mid w)$, $g(0\mid w)$, $e(1\mid m, w)$,
    $e(0\mid m, w)$,$b(1, m, w)$, $b(0, m, w)$, and  $b(a, m, w)$
 
-```{r, echo = TRUE, eval = FALSE}
+```{r}
 ## Compute P(A = 1 | W)
 g1_pred <- predict(g_fit, type = 'response')
 ## Compute P(A = 0 | W)
@@ -215,7 +218,7 @@ b0_pred <- predict(b_fit, newdata = data.frame(a = 0, m, w))
 b_pred  <- predict(b_fit)
 ```
 3. Compute $Q(M, W)$, fit a model for $\E[Q(M,W) | W,A]$, and predict at $A=0$
-```{r, echo = TRUE, eval = FALSE}
+```{r}
 ## Compute Q(M, W)
 pseudo <- b1_pred - b0_pred
 ## Fit model for E[Q(M, W) | A, W]
@@ -230,18 +233,18 @@ q_pred <- predict(q_fit, newdata = data.frame(a = 0, w = w))
       \frac{I(A=0)}{g(0\mid W)}\bigg\}
   \end{equation*}
   using the above predictions:
-```{r, echo = TRUE, eval = TRUE, cache = TRUE}
-weights <- a / g0_pred * e0_pred / e1_pred - (1 - a) / g0_pred 
+```{r}
+weights <- a / g0_pred * e0_pred / e1_pred - (1 - a) / g0_pred
 ```
 
 5. Compute the uncentered EIF:
-```{r, echo = TRUE, eval = FALSE}
+```{r}
 eif <- weights * (y - b_pred) + (1 - a) / g0_pred * (pseudo - q_pred) +
   q_pred
 ```
 
 6. The one step estimator is the mean of the uncentered EIF
-```{r, echo = TRUE, eval = FALSE}
+```{r}
 ## One-step estimator
 mean(eif)
 ```
@@ -249,7 +252,7 @@ mean(eif)
 ### Performance of the one-step estimator in a small simulation study
 
 First, we create a wrapper around the estimator
-```{r, echo = TRUE, eval = FALSE}
+```{r}
 one_step <- function(y, m, a, w) {
   b_fit <- gam(y ~ m:a + s(w, by = a))
   e_fit <- gam(a ~ m + w + s(w, by = m), family = binomial)
@@ -267,17 +270,17 @@ one_step <- function(y, m, a, w) {
   q_fit <- gam(pseudo ~ a + w + s(w, by = a))
   q_pred <- predict(q_fit, newdata = data.frame(a = 0, w = w))
   weights <- a / g0_pred * e0_pred / e1_pred - (1 - a) / g0_pred
-  eif <- weights * (y - b_pred) + (1 - a) / g0_pred * (pseudo - q_pred) + q_pred
+  eif <- weights * (y - b_pred) + (1 - a) / g0_pred *
+    (pseudo - q_pred) + q_pred
   return(mean(eif))
 }
 ```
 
 Let us first examine the bias
 
-
 - The true value is:
 
-```{r, echo = TRUE, eval = TRUE, class.source = 'fold-hide'}
+```{r}
 w_big <- runif(1e6, -1, 1)
 trueval <- mean((mean_y(1, 1, w_big) - mean_y(1, 0, w_big)) * mean_m(0, w_big) +
   (mean_y(0, 1, w_big) - mean_y(0, 0, w_big)) * (1 - mean_m(0, w_big)))
@@ -285,7 +288,7 @@ print(trueval)
 ```
 
 - Bias simulation
-```{r, echo = TRUE, eval = FALSE}
+```{r}
 estimate <- numeric(1000)
 for (i in 1:1000) {
   n <- 1000
@@ -303,7 +306,7 @@ abline(v = trueval, col = "red", lwd = 4)
 
 - And now the confidence intervals:
 
-```{r, echo = TRUE, eval = FALSE, fig.height = 8, fig.width = 8}
+```{r, fig.height = 8, fig.width = 8}
 cis <- cbind(
   estimate - qnorm(0.975) * sd(estimate),
   estimate + qnorm(0.975) * sd(estimate)
@@ -327,6 +330,3 @@ text(450, 0.01, paste0(
   mean(lower < trueval & trueval < upper), "%"
 ), cex = 1.2)
 ```
-
-
-
