--- a/index.Rmd
+++ b/index.Rmd
@@ -31,6 +31,9 @@ Meeting](https://epiresearch.org/annual-meeting/2021-meeting/workshop/) on
 Monday, 24 May 2021. While we encourage use of this `bookdown` site, for
 convenience, we have also made these workshop materials [available in
 PDF](https://code.nimahejazi.org/ser2021_mediation_workshop/ser2021mediation.pdf).
+Discussion will take place _on Slack_ -- first join the workspace
+[here](https://join.slack.com/t/moderncausalmediation/shared_invite/zt-qd2ocx45-XlKvMA9FXlsixnwI7VnbHQ),
+then the "#ser2021" channel.
 
 ## About this workshop {#about}
 
@@ -60,22 +63,17 @@ parameter estimable from the observed data distribution). Familiarity with the
 
 ## Workshop schedule {#schedule}
 
-* 10:00A-10:30A: introductions/mediation set up
-<!-- Ivan-->
-* 10:30A-11:15A: controlled direct effects, natural direct and indirect effects, interventional direct and indirect effects
- <!-- Kara-->
-* 11:15A-11:45A: stochastic mediation estimands
- <!-- Nima-->
-* 11:45A-12:00P: how to choose an estimand in real-world examples
- <!-- Kara-->
+* 10:00A-10:30A: introductions/mediation set up <!-- Ivan-->
+* 10:30A-11:15A: controlled direct effects, natural direct and indirect effects,
+  interventional direct and indirect effects <!-- Kara-->
+* 11:15A-11:45A: stochastic mediation estimands <!-- Nima-->
+* 11:45A-12:00P: how to choose an estimand in real-world examples <!-- Kara-->
 * 12:00P-12:15P break/discussion
-* 12:15P-12:45P: what is the EIF
- <!-- Ivan-->
-* 12:45P-01:00P: using the EIF for estimating the natural direct effect
-<!-- Ivan-->
-* 01:00P-01:45P: practice: `R` code for estimation
- <!-- Nima-->
-* 01:45P-02:00P wrap up
+* 12:15P-12:45P: what is the EIF <!-- Ivan-->
+* 12:45P-01:00P: using the EIF for estimating the natural direct
+  effect <!-- Ivan-->
+* 01:00P-01:45P: practice: `R` code for estimation <!-- Nima-->
+* 01:45P-02:00P: Wrap-up
 
 __NOTE: All times listed in Pacific Time.__
 
@@ -83,13 +81,12 @@ __NOTE: All times listed in Pacific Time.__
 
 ### Iván Díaz {-}
 
-I am an Assistant Professor at Weill Cornel Medicine. My research
-focuses on the development of non-parametric statistical methods for
-causal inference from observational and randomized studies with
-complex datasets, using machine learning. This includes but is not
-limited to mediation analysis, methods for continuous exposures,
-longitudinal data including survival analysis, and efficiency
-guarantees with covariate adjustment in randomized trials. I am also
+I am an Assistant Professor at Weill Cornel Medicine. My research focuses on the
+development of non-parametric statistical methods for causal inference from
+observational and randomized studies with complex datasets, using machine
+learning. This includes but is not limited to mediation analysis, methods for
+continuous exposures, longitudinal data including survival analysis, and
+efficiency guarantees with covariate adjustment in randomized trials. I am also
 interested in general semi-parametric theory, machine learning, and
 high-dimensional data.
 
@@ -98,13 +95,11 @@ high-dimensional data.
 I am a PhD candidate in biostatistics at UC Berkeley, working under the joint
 direction of Mark van der Laan and Alan Hubbard. My research interests fall at
 the intersection of causal inference and machine learning, drawing on ideas from
-non/semi-parametric estimation in large, flexible statistical models to develop
-efficient and robust statistical procedures for evaluating complex target
-estimands in observational and randomized studies.  Particular areas of current
-emphasis include causal mediation/path analysis, outcome-dependent sampling
-designs, targeted loss-based estimation, and applications in vaccine efficacy
-trials. I am also passionate about statistical computing and open source
-software development for applied statistics.
+non/semi-parametric estimation in large, flexible statistical models. Particular
+areas of current emphasis include causal mediation analysis, corrections for
+outcome-dependent sampling designs, targeted loss-based estimation, and
+applications in vaccine efficacy trials. I am also passionate about statistical
+computing and open source software development for applied statistics.
 
 ### Kara Rudolph {-}
 
